--- a/_config.yml
+++ b/_config.yml
@@ -83,6 +83,8 @@ JB:
   # Set 'provider' to the comment provider you want to use.
   # Set 'provider' to false to turn commenting off globally.
   #
+  baseurl=/  # add By Gavin
+  
   comments:
     provider: disqus
     disqus:
